[package]
authors = ['ICE Team <https://icenetwork.io>']
build = 'build.rs'
description = 'ICE Network is an EVM compatible network built with Substrate framework'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'frost-runtime'
repository = 'https://github.com/web3labs/ice-substrate/'
version = '0.4.58'
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = [
  "derive",
] }
smallvec = "1.10.0"
static_assertions = "1.1.0"

# frame dependencies
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# pallets dependencies from substrate 
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-assets = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-vesting = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }                             # { path = "/Users/abhi/code/substrate/frame/utility", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-preimage = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

# sp dependencies from substrate 
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# pallet dependencies from frontier 
pallet-base-fee = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
pallet-evm = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
pallet-ethereum = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
pallet-dynamic-fee = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }

# fp dependencies from frontier 
fp-rpc = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }
fp-self-contained = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.36" }

# local pallet
pallet-simple-inflation = { path = '../../pallets/simple-inflation', default-features = false, version = '0.0.2' }
pallet-fees-split = { path = "../../pallets/fees-split", default-features = false, version = '0.0.1' }
pallet-airdrop = { path = "../../pallets/airdrop", default-features = false }
assets-evm ={ path="../common/assets-evm", default-features = false}

# ice-runtime-common = { default-features = false, path = "../common", optional = true }

# try-runtime
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false, optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false, optional = true }


# benchmarking dependencies from substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false, optional = true }

[dev-dependencies]
separator = "0.4.1"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
  "codec/std",
  "serde",
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "fp-rpc/std",
  "fp-self-contained/std",

  "pallet-airdrop/std",
  "pallet-assets/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-base-fee/std",
  "pallet-bounties/std",
  "pallet-collective/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts/std",
  "pallet-democracy/std",
  "pallet-dynamic-fee/std",
  "pallet-elections-phragmen/std",
  "pallet-ethereum/std",
  "pallet-evm-precompile-sha3fips/std",
  "pallet-evm-precompile-simple/std",
  "pallet-evm/std",
  "pallet-fees-split/std",
  "pallet-grandpa/std",
  "pallet-identity/std",
  "pallet-indices/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-preimage/std",
  "pallet-proxy/std",
  "pallet-randomness-collective-flip/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-simple-inflation/std",
  "pallet-staking/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-tips/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-treasury/std",
  "pallet-vesting/std",

  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",

  "frame-benchmarking/std",
  # "frame-system-benchmarking/std",

  "scale-info/std",
  # "ice-runtime-common",
]
runtime-benchmarks = [
  'sp-runtime/runtime-benchmarks',
  'frame-support/runtime-benchmarks',
  "frame-benchmarking/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  'pallet-assets/runtime-benchmarks',
  'pallet-balances/runtime-benchmarks',
  'pallet-contracts/runtime-benchmarks',
  'pallet-democracy/runtime-benchmarks',
  'pallet-grandpa/runtime-benchmarks',
  'pallet-identity/runtime-benchmarks',
  'pallet-multisig/runtime-benchmarks',
  'pallet-preimage/runtime-benchmarks',
  'pallet-proxy/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  "pallet-airdrop/runtime-benchmarks",
  "pallet-bounties/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-elections-phragmen/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",
  "pallet-evm/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-tips/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-vesting/runtime-benchmarks",
]

try-runtime = [
  "frame-try-runtime",
  "frame-executive/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-airdrop/try-runtime",
  "pallet-assets/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-bounties/try-runtime",
  "pallet-base-fee/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-contracts/try-runtime",
  "pallet-democracy/try-runtime",
  "pallet-dynamic-fee/try-runtime",
  "pallet-elections-phragmen/try-runtime",
  "pallet-ethereum/try-runtime",
  "pallet-evm/try-runtime",
  "pallet-fees-split/try-runtime",
  "pallet-grandpa/try-runtime",
  "pallet-identity/try-runtime",
  "pallet-indices/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-randomness-collective-flip/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-session/try-runtime",
  "pallet-simple-inflation/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-tips/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-vesting/try-runtime",
  "fp-self-contained/try-runtime",
]
