[package]
name = "runtime-integration-tests"
version = "0.0.1"
authors = ["Snow Developers"]
edition = "2021"

[dependencies]
arctic-runtime = { path = "../arctic" }

# cumulus deps
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.25", default-features = false }

# frame deps
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# orml
orml-asset-registry = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.25" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.25" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.25" }


# substrate
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# polkadot deps
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.25" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }

rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", rev = "8b640e894208e45176b7827c5d349f06d8c34350" } # this rev is for polkadot v0.9.25

[dev-dependencies]
env_logger = "0.9.0"
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }

rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.25" }
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", rev = "8b640e894208e45176b7827c5d349f06d8c34350" } # this rev is for polkadot v0.9.25
