[package]
name = "snow_rewards"
version = "0.1.2"
authors = ["Sabin Chitrakar sabinchitrakar11@gmail.com"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false , features = ["ink-debug"]}
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }
ink_prelude = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
hex-literal="0.3.4"

[dev-dependencies]
ink_e2e = { git="https://github.com/paritytech/ink.git", branch="master"}

[lib]
name = "snow_rewards"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
